# mt5forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: api_reference.md  architecture.md  backtesting_guide.md  notification_channels.md  risk_management.md  strategy_guide.md
examples/: backtest_example.py  custom_strategy_example.py  live_trading_example.py  multi_strategy_example.py  notification_setup_example.py
mt5forge/: __init__.py
mt5forge/backtest/: __init__.py  analytics.py  data_loader.py  runner.py  simulator.py  slippage_sim.py  spread_sim.py
mt5forge/conditions/: __init__.py  classifier.py  regime.py  trend_detector.py  volatility_meter.py
mt5forge/config/: __init__.py  backtest_config.py  loader.py  notification_config.py  risk_config.py  trading_config.py
mt5forge/connection/: __init__.py  connector.py  health.py  session.py
mt5forge/core/: __init__.py  constants.py  engine.py  events.py  exceptions.py
mt5forge/hedge/: __init__.py  hedge_calculator.py  hedge_guard.py  hedge_manager.py  selloff_recovery.py
mt5forge/indicators/: __init__.py  atr.py  base.py  bollinger.py  crossover.py  macd.py  moving_averages.py  rsi.py
mt5forge/logging/: __init__.py  filters.py  handlers.py  setup.py
mt5forge/market/: __init__.py  data_feed.py  market_hours.py  spread_monitor.py  symbol_info.py
mt5forge/monitoring/: __init__.py  heartbeat.py  latency_tracker.py  monitor.py  resource_monitor.py  terminal_watcher.py
mt5forge/notifications/: __init__.py  alert_types.py  base.py  bus.py  formatter.py  rate_limiter.py
mt5forge/orders/: __init__.py  order_builder.py  order_manager.py  order_tracker.py  order_validator.py  retry.py
mt5forge/positions/: __init__.py  pnl_calculator.py  portfolio_manager.py  position_tracker.py
mt5forge/risk/: __init__.py  cooldown.py  drawdown_guard.py  exposure_monitor.py  lot_calculator.py  risk_manager.py
mt5forge/strategies/: __init__.py  base.py  hedge_recovery.py  (+4 more)
scripts/: build.sh  publish.sh  run_backtest.py
tests/: conftest.py
(+26 files in other folders)
