[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mt5forge"
version = "1.0.2"
description = "Production-grade Python MT5 trading infrastructure library"
readme = "README.md"    
license = { text = "MIT" }
authors = [
    { name = "Soham Attarde", email = "sohamattarde1604@gmail.com" },
    { name = "Shadab Jamadar", email = "shadabjamadar4@gmail.com" }
]
keywords = ["metatrader5", "algorithmic-trading", "forex", "mt5", "trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.12"
dependencies = [
    "MetaTrader5>=5.0.45; platform_system == 'Windows'",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "aiosmtplib>=3.0.0",
    "APScheduler>=3.10.4",
    "psutil>=5.9.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.11.0",
    "ruff>=0.3.0",
    "hatchling>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/UnbeatableBann/mt5forge"
Documentation = "https://mt5forge.readthedocs.io"
Repository = "https://github.com/UnbeatableBann/mt5forge"
Issues = "https://github.com/UnbeatableBann/mt5forge/issues"
Changelog = "https://github.com/UnbeatableBann/mt5forge/CHANGELOG.md"


[tool.hatch.build.targets.wheel]
packages = ["mt5forge"]

[tool.ruff]
target-version = "py312"
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mt5forge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
